2008-02-10  chl  <chl@tuxfamily.org>

	- update from the latest OpenCVS cvs repo (source and regress).
	- add LICENCE file.
	- fix build for FreeBSD 6.2-RELEASE (thanks to Igor Zinovik for the
	report and patch).

2008-02-05  chl  <chl@tuxfamily.org>

	- update from the latest OpenCVS cvs repo (source and regress).
	- make it build on FreeBSD 6.2-RELEASE (thanks to Igor Zinovik for the
	report and patch).
	- make it build when basename is not available (from Igor Zinovik's
	suggestion).

2008-02-01  chl  <chl@tuxfamily.org>

	- update from the latest OpenCVS cvs repo (source and regress).

2008-01-11  chl  <chl@tuxfamily.org>

	- update from the latest OpenCVS cvs repo (source and regress).

2007-12-27  chl  <chl@tuxfamily.org>

	- update from the latest OpenCVS cvs repo (source).
	- make it build on MacOS X (thanks to Elias Pipping for the
	report and help)
	- replace autogen.sh script by
	http://sam.zoy.org/autotools/bootstrap

2007-10-12  chl  <chl@tuxfamily.org>

	- update from the latest OpenCVS cvs repo (source and regress).
	- improve regress tests Makefile

2007-10-06  chl  <chl@tuxfamily.org>

	- make it build when futimes and getdirentries are not available.
	(Thanks to Natanael Copa for the initial report and help)
	Now it build on Alpine Linux, which is a Gentoo uclibc distro.

2007-10-04  chl  <chl@tuxfamily.org>

	- add openbsd-compat and regress directories to follow Damien
	Miller advise
	- make it build on amd64

2007-10-02  chl  <chl@tuxfamily.org>

	- first announcement to OpenCVS developers