@@ -1,6 +1,6 @@
-lib_LTLIBRARIES =libopenbsd-compat.la
+noinst_LIBRARIES = libopenbsd-compat.a
 
-libopenbsd_compat_la_SOURCES = \
+libopenbsd_compat_a_SOURCES = \
 		  fgetln.c strlcat.c strlcpy.c strtonum.c md5.c md5_helper.c \
 		  basename.c dirname.c utimes.c
 
